--- a/src/test_task.ipynb
+++ b/src/test_task.ipynb
@@ -760,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 302,
    "metadata": {
     "collapsed": true
    },
@@ -772,15 +772,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 303,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 520 ms, sys: 10 ms, total: 530 ms\n",
-      "Wall time: 529 ms\n"
+      "CPU times: user 340 ms, sys: 0 ns, total: 340 ms\n",
+      "Wall time: 340 ms\n"
      ]
     }
    ],
@@ -791,14 +791,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Comment vectors lenth. Max: 621, min: 0\n"
+      "Comment vectors lenth. Max: 610, min: 0\n"
      ]
     }
    ],
@@ -808,18 +808,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 374,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "VECTOR_LEN = df.vcomment.map(len).max()"
+    "VECTOR_LEN = 20*4#df.vcomment.map(len).max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 375,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "VECTOR_LEN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y = np.zeros((df.shape[0], 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 334,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[2, 1] = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 335,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  1.,  0.,  0.,  0.],\n",
+       "       ..., \n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.],\n",
+       "       [ 0.,  0.,  0.,  0.,  0.]])"
+      ]
+     },
+     "execution_count": 335,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
    "metadata": {
     "collapsed": true
    },
@@ -827,30 +893,25 @@
    "source": [
     "def get_train_data(df):\n",
     "    X = np.zeros((df.shape[0], VECTOR_LEN))\n",
-    "    y = np.rint(df.reting.values)\n",
-    "    for i, row in df.iterrows():\n",
-    "        lenth = len(row['vcomment'])\n",
-    "        X[i, :lenth] = np.array(row['vcomment'])\n",
+    "    y = np.zeros((df.shape[0], 5))\n",
+    "    _y = np.rint(df.reting.values).astype(int)\n",
+    "    print(\"VECTOR_LEN\", VECTOR_LEN)\n",
+    "    try:\n",
+    "        for i, row in df.iterrows():\n",
+    "            y[i, _y[i]-1] = 1\n",
+    "\n",
+    "            lenth = len(row['vcomment'])\n",
+    "            vcomment = row['vcomment'][:]\n",
+    "            if lenth > VECTOR_LEN:\n",
+    "                lenth = VECTOR_LEN\n",
+    "                vcomment = vcomment[:lenth]\n",
+    "            X[i, :lenth] = np.array(vcomment)\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        print(i, _y[i], y[i])\n",
+    "    print(\"X.shape\", X.shape)\n",
+    "    \n",
     "    return X, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 187,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 1.24 s, sys: 10 ms, total: 1.25 s\n",
-      "Wall time: 1.27 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "data_X, data_y = get_train_data(df)"
    ]
   },
   {
@@ -1258,6 +1319,320 @@
    ],
    "source": [
     "run_model(sess, y_out, mean_loss, X_train, y_train, 1, 256, 100, train_step, False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## from youtube:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 276,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(31.0, 576)"
+      ]
+     },
+     "execution_count": 276,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "620/(2*2*5), 24**2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 355,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def iter_batch(X, y, batch_size):\n",
+    "    for i in range(int(X.shape[0]/batch_size)):\n",
+    "        start = i*batch_size\n",
+    "        end = i*batch_size + batch_size\n",
+    "        yield X[start:end], y[start:end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.python.ops import rnn, rnn_cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 377,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "VECTOR_LEN 80\n",
+      "X.shape (8470, 80)\n",
+      "VECTOR_LEN 80\n",
+      "X.shape (2117, 80)\n"
+     ]
+    }
+   ],
+   "source": [
+    "_X_train, _y_train = get_train_data(df_train)\n",
+    "_X_test, _y_test = get_train_data(df_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 378,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8470, 80)"
+      ]
+     },
+     "execution_count": 378,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "hm_epochs = 20\n",
+    "n_classes = 5\n",
+    "batch_size = 128\n",
+    "chunk_size = 20\n",
+    "n_chunks = 4\n",
+    "rnn_size = 64\n",
+    "\n",
+    "x = tf.placeholder('float', [None, n_chunks, chunk_size])\n",
+    "y = tf.placeholder('float')\n",
+    "\n",
+    "\n",
+    "def recurrent_neural_network(x):\n",
+    "    layer = {'weights':tf.Variable(tf.random_normal([rnn_size, n_classes])),\n",
+    "             'biases':tf.Variable(tf.random_normal([n_classes]))}\n",
+    "    \n",
+    "    print(1, x.get_shape())\n",
+    "    \n",
+    "    x = tf.transpose(x, [1, 0, 2])\n",
+    "    print(2, x.get_shape())\n",
+    "    \n",
+    "    x = tf.reshape(x, [-1, chunk_size])\n",
+    "    print(3, x.get_shape())\n",
+    "    \n",
+    "    x = tf.split(x, n_chunks, 0)\n",
+    "    print(4, len(x), x[0].get_shape(),)\n",
+    "    lstm_cell = rnn_cell.BasicLSTMCell(rnn_size)\n",
+    "    outputs, states = tf.nn.static_rnn(lstm_cell, x, dtype=tf.float32) \n",
+    "    \n",
+    "    output = tf.matmul(outputs[-1], layer['weights']) + layer['biases']\n",
+    "\n",
+    "    return output\n",
+    "\n",
+    "\n",
+    "def train_neural_network(x):\n",
+    "    prediction = recurrent_neural_network(x)\n",
+    "    cost = tf.reduce_mean(\n",
+    "        tf.nn.softmax_cross_entropy_with_logits(logits=prediction, labels=y)\n",
+    "    )\n",
+    "    optimizer = tf.train.AdamOptimizer().minimize(cost)\n",
+    "    \n",
+    "    with tf.Session() as sess:\n",
+    "        sess.run(tf.global_variables_initializer())\n",
+    "\n",
+    "        for epoch in range(hm_epochs):\n",
+    "            epoch_loss = 0\n",
+    "            for (epoch_x, epoch_y) in iter_batch(_X_train, _y_train, batch_size):\n",
+    "                epoch_x = epoch_x.reshape((batch_size, n_chunks, chunk_size))\n",
+    "                _, c = sess.run([optimizer, cost], feed_dict={x: epoch_x, y: epoch_y})\n",
+    "                epoch_loss += c\n",
+    "\n",
+    "            print('Epoch', epoch, 'completed out of',hm_epochs,'loss:',epoch_loss)\n",
+    "\n",
+    "        correct = tf.equal(tf.argmax(prediction, 1), tf.argmax(y, 1))\n",
+    "\n",
+    "        accuracy = tf.reduce_mean(tf.cast(correct, 'float'))\n",
+    "        print(\n",
+    "            'Accuracy:',\n",
+    "            accuracy.eval({x:_X_test.reshape((-1, n_chunks, chunk_size)), y:_y_test})\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (?, 24, 24)\n",
+      "2 (24, ?, 24)\n",
+      "3 (?, 24)\n",
+      "4 24 (?, 24)\n",
+      "Epoch 0 completed out of 3 loss: 99.4846767187\n",
+      "Epoch 1 completed out of 3 loss: 95.3996949196\n",
+      "Epoch 2 completed out of 3 loss: 94.8969253302\n",
+      "Accuracy: 0.405291\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_neural_network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (?, 24, 24)\n",
+      "2 (24, ?, 24)\n",
+      "3 (?, 24)\n",
+      "4 24 (?, 24)\n",
+      "Epoch 0 completed out of 10 loss: 97.8797097206\n",
+      "Epoch 1 completed out of 10 loss: 95.3734817505\n",
+      "Epoch 2 completed out of 10 loss: 95.068767786\n",
+      "Epoch 3 completed out of 10 loss: 94.7169961929\n",
+      "Epoch 4 completed out of 10 loss: 94.3189940453\n",
+      "Epoch 5 completed out of 10 loss: 93.9752606153\n",
+      "Epoch 6 completed out of 10 loss: 93.6479409933\n",
+      "Epoch 7 completed out of 10 loss: 93.4034472704\n",
+      "Epoch 8 completed out of 10 loss: 93.0756297112\n",
+      "Epoch 9 completed out of 10 loss: 92.7269163132\n",
+      "Accuracy: 0.392537\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_neural_network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 367,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (?, 24, 24)\n",
+      "2 (24, ?, 24)\n",
+      "3 (?, 24)\n",
+      "4 24 (?, 24)\n",
+      "Epoch 0 completed out of 20 loss: 99.360178709\n",
+      "Epoch 1 completed out of 20 loss: 95.656227231\n",
+      "Epoch 2 completed out of 20 loss: 95.2892481089\n",
+      "Epoch 3 completed out of 20 loss: 94.8675023317\n",
+      "Epoch 4 completed out of 20 loss: 94.624560833\n",
+      "Epoch 5 completed out of 20 loss: 94.2713340521\n",
+      "Epoch 6 completed out of 20 loss: 94.0349539518\n",
+      "Epoch 7 completed out of 20 loss: 93.7472913265\n",
+      "Epoch 8 completed out of 20 loss: 93.4175435305\n",
+      "Epoch 9 completed out of 20 loss: 93.1657699347\n",
+      "Epoch 10 completed out of 20 loss: 92.8813531399\n",
+      "Epoch 11 completed out of 20 loss: 92.7012565136\n",
+      "Epoch 12 completed out of 20 loss: 92.5030540228\n",
+      "Epoch 13 completed out of 20 loss: 92.0236978531\n",
+      "Epoch 14 completed out of 20 loss: 91.5962371826\n",
+      "Epoch 15 completed out of 20 loss: 91.3623549938\n",
+      "Epoch 16 completed out of 20 loss: 91.3623695374\n",
+      "Epoch 17 completed out of 20 loss: 90.9268134832\n",
+      "Epoch 18 completed out of 20 loss: 90.3944739103\n",
+      "Epoch 19 completed out of 20 loss: 90.1934316158\n",
+      "Accuracy: 0.359943\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_neural_network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 385,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 (?, 4, 20)\n",
+      "2 (4, ?, 20)\n",
+      "3 (?, 20)\n",
+      "4 4 (?, 20)\n",
+      "Epoch 0 completed out of 20 loss: 160.915260792\n",
+      "Epoch 1 completed out of 20 loss: 139.074428082\n",
+      "Epoch 2 completed out of 20 loss: 132.018848181\n",
+      "Epoch 3 completed out of 20 loss: 128.249521375\n",
+      "Epoch 4 completed out of 20 loss: 123.707511783\n",
+      "Epoch 5 completed out of 20 loss: 119.691427946\n",
+      "Epoch 6 completed out of 20 loss: 118.084456205\n",
+      "Epoch 7 completed out of 20 loss: 114.815919518\n",
+      "Epoch 8 completed out of 20 loss: 113.764876127\n",
+      "Epoch 9 completed out of 20 loss: 111.4965868\n",
+      "Epoch 10 completed out of 20 loss: 110.05403316\n",
+      "Epoch 11 completed out of 20 loss: 108.941696763\n",
+      "Epoch 12 completed out of 20 loss: 107.889149308\n",
+      "Epoch 13 completed out of 20 loss: 106.725875378\n",
+      "Epoch 14 completed out of 20 loss: 105.632687926\n",
+      "Epoch 15 completed out of 20 loss: 104.733488321\n",
+      "Epoch 16 completed out of 20 loss: 103.923822284\n",
+      "Epoch 17 completed out of 20 loss: 102.943990827\n",
+      "Epoch 18 completed out of 20 loss: 102.091419458\n",
+      "Epoch 19 completed out of 20 loss: 102.618373871\n",
+      "Accuracy: 0.375059\n"
+     ]
+    }
+   ],
+   "source": [
+    "train_neural_network(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# try to spars matrix"
    ]
   },
   {
