--- a/src/test_task.ipynb
+++ b/src/test_task.ipynb
@@ -28,6 +28,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "_df_train = pd.read_csv('../data/df_test.csv', encoding='utf-8')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>sku</th>\n",
+       "      <th>categoryLevel1Id</th>\n",
+       "      <th>categoryLevel2Id</th>\n",
+       "      <th>brandId</th>\n",
+       "      <th>property</th>\n",
+       "      <th>userName</th>\n",
+       "      <th>reting</th>\n",
+       "      <th>date</th>\n",
+       "      <th>comment</th>\n",
+       "      <th>commentNegative</th>\n",
+       "      <th>commentPositive</th>\n",
+       "      <th>vcomment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>11024332</td>\n",
+       "      <td>107</td>\n",
+       "      <td>1070907</td>\n",
+       "      <td>13</td>\n",
+       "      <td>[{236: 'e04af96afe53462f72f39331b209a810'}, {3...</td>\n",
+       "      <td>ee6914bab207793e1eb805b2d755abc7</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2010-01-28</td>\n",
+       "      <td>????????? ?????????? 23.12.2010? ???????????? ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[  100     6    33   142    20     2  4233   1...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>20003611</td>\n",
+       "      <td>406</td>\n",
+       "      <td>4060501</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>[{115: '6c9882bbac1c7093bd25041881277658'}, {1...</td>\n",
+       "      <td>3d801da09e7d82668e226799d9db91dc</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2009-10-19</td>\n",
+       "      <td>???????? ????????????? ??? ????????? ??????? ?...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[  351    74  4233    28     2   122   331   7...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20021789</td>\n",
+       "      <td>401</td>\n",
+       "      <td>4010201</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>[{10879: 'fc490ca45c00b1249bbe3554a4fdf6fb'}, ...</td>\n",
+       "      <td>ae5953ee1b32ee7dd79a255f909e56ba</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2015-09-25</td>\n",
+       "      <td>????? ????????!!!?????!????????!???????!!!????...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[ 1647   610    85    31   335   983   917    ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>20022517</td>\n",
+       "      <td>408</td>\n",
+       "      <td>4080301</td>\n",
+       "      <td>939</td>\n",
+       "      <td>[{3: '3ef815416f775098fe977004015c6193'}, {1: ...</td>\n",
+       "      <td>07adc9f58dbb3c54b7b4b98d043451a5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2014-11-12</td>\n",
+       "      <td>?????? ??????????? ????? Hansa FCCW51004017 ??...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[  522     4    71    16     1   417    57  13...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>20022078</td>\n",
+       "      <td>413</td>\n",
+       "      <td>4130401</td>\n",
+       "      <td>31</td>\n",
+       "      <td>[{115: 'e5841df2166dd424a57127423d276bbe'}, {1...</td>\n",
+       "      <td>b97e2eac92fb53290a17d63a92ac2afd</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2012-03-19</td>\n",
+       "      <td>????????? ?????? ???, ?? ???? ?? ???????! ????...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>[  711    84   888   969   270 19125    21    ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0       sku  categoryLevel1Id  categoryLevel2Id  brandId  \\\n",
+       "0           0  11024332               107           1070907       13   \n",
+       "1           1  20003611               406           4060501     1050   \n",
+       "2           2  20021789               401           4010201     1020   \n",
+       "3           3  20022517               408           4080301      939   \n",
+       "4           4  20022078               413           4130401       31   \n",
+       "\n",
+       "                                            property  \\\n",
+       "0  [{236: 'e04af96afe53462f72f39331b209a810'}, {3...   \n",
+       "1  [{115: '6c9882bbac1c7093bd25041881277658'}, {1...   \n",
+       "2  [{10879: 'fc490ca45c00b1249bbe3554a4fdf6fb'}, ...   \n",
+       "3  [{3: '3ef815416f775098fe977004015c6193'}, {1: ...   \n",
+       "4  [{115: 'e5841df2166dd424a57127423d276bbe'}, {1...   \n",
+       "\n",
+       "                           userName  reting        date  \\\n",
+       "0  ee6914bab207793e1eb805b2d755abc7     4.0  2010-01-28   \n",
+       "1  3d801da09e7d82668e226799d9db91dc     5.0  2009-10-19   \n",
+       "2  ae5953ee1b32ee7dd79a255f909e56ba     5.0  2015-09-25   \n",
+       "3  07adc9f58dbb3c54b7b4b98d043451a5     3.0  2014-11-12   \n",
+       "4  b97e2eac92fb53290a17d63a92ac2afd     5.0  2012-03-19   \n",
+       "\n",
+       "                                             comment commentNegative  \\\n",
+       "0  ????????? ?????????? 23.12.2010? ???????????? ...             NaN   \n",
+       "1  ???????? ????????????? ??? ????????? ??????? ?...             NaN   \n",
+       "2  ????? ????????!!!?????!????????!???????!!!????...             NaN   \n",
+       "3  ?????? ??????????? ????? Hansa FCCW51004017 ??...             NaN   \n",
+       "4  ????????? ?????? ???, ?? ???? ?? ???????! ????...             NaN   \n",
+       "\n",
+       "  commentPositive                                           vcomment  \n",
+       "0             NaN  [  100     6    33   142    20     2  4233   1...  \n",
+       "1             NaN  [  351    74  4233    28     2   122   331   7...  \n",
+       "2             NaN  [ 1647   610    85    31   335   983   917    ...  \n",
+       "3             NaN  [  522     4    71    16     1   417    57  13...  \n",
+       "4             NaN  [  711    84   888   969   270 19125    21    ...  "
+      ]
+     },
+     "execution_count": 390,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_df_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "metadata": {
     "collapsed": true
@@ -715,7 +898,7 @@
    },
    "outputs": [],
    "source": [
-    "df_train.to_csv('../data/df_train.csv')"
+    "df_train.to_csv('../data/df_train.csv', )"
    ]
   },
   {
@@ -742,13 +925,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 391,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "df_test.to_csv('../data/df_test.csv')"
+    "df_test.to_csv('../data/df_test.csv', encoding='utf-8')"
    ]
   },
   {
